trunk/Archive2/3c/9f1f33da39a48a/output
main.cpp: In instantiation of 'static int& XImpl<has>::apply(T*) [with T = X; bool has = false]':
main.cpp:49:43:   required from 'int& x(T*) [with T = X]'
main.cpp:37:43:   required from 'static int& XImpl<has>::apply(T*) [with T = Z<X>; bool has = false]'
main.cpp:49:43:   required from 'int& x(T*) [with T = Z<X>]'
main.cpp:93:9:   required from here
main.cpp:37:43: error: no type named 'Base' in 'struct X'
         return x<typename T::Base>(t->base);
                                           ^
main.cpp:37:43: error: 'struct X' has no member named 'base'
main.cpp: In static member function 'static int& XImpl<has>::apply(T*) [with T = X; bool has = false]':
main.cpp:38:5: warning: control reaches end of non-void function [-Wreturn-type]
     }
     ^
